# TTMultiplayer

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  bazel-TTMultiplayer  bazel-bin  bazel-out  bazel-testlogs
include/: communication.hpp  messages.hpp  net.hpp  slide.hpp
src/: communication.cpp  main.cpp  slide.cpp
