load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# The Slide movement class, split into its own library so the header is staged
# for dependents and slide.cpp gets compiled (and can later be unit-tested).
cc_library(
    name = "slide",
    srcs = ["src/slide.cpp"],
    hdrs = ["include/slide.hpp"],
    # Propagates -Iinclude to dependents so headers are included unqualified.
    includes = ["include"],
    # Warn on switch statements that don't handle every enum value.
    copts = ["-Wswitch"],
    deps = [
        "@raylib//:raylib",
    ]
)

cc_library(
    name = "communication",
    srcs = ["src/communication.cpp"],
    hdrs = ["include/communication.hpp"],
    # Propagates -Iinclude to dependents so headers are included unqualified.
    includes = ["include"],
    deps = [
        "@boost.asio//:boost.asio",
    ],
)

cc_library(
    name = "messages",
    hdrs = ["include/messages.hpp"],
    includes = ["include"],
)

cc_library(
    name = "net",
    hdrs = ["include/net.hpp"],
    includes = ["include"],
    # std::atomic<SlidePosition> is 12 bytes — not hardware-lock-free, so GCC
    # lowers it to libatomic calls. Propagates -latomic to dependents.
    linkopts = ["-latomic"],
    deps = [
        ":messages",
        "@boost.asio//:boost.asio",
    ],
)

cc_binary(
    name = "server",
    srcs = ["src/main.cpp"],
    copts = ["-Wswitch"],
    defines = ["SERVER_SIDE"],
    deps = [
        ":net",
        ":slide",
        "@raylib//:raylib",
    ],
)

cc_binary(
    name = "client",
    srcs = ["src/main.cpp"],
    copts = ["-Wswitch"],
    deps = [
        ":net",
        ":slide",
        "@raylib//:raylib",
    ],
)
