"""Bzlmod module definition for the MultiplayerGame project.

raylib is not published in the Bazel Central Registry, so it is fetched as a
source archive and compiled from scratch via the BUILD file in //third_party.
"""

module(
    name = "multiplayer_game",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# raylib built from source (BCR has no raylib module).
http_archive(
    name = "raylib",
    urls = ["https://github.com/raysan5/raylib/archive/refs/tags/5.5.tar.gz"],
    sha256 = "aea98ecf5bc5c5e0b789a76de0083a21a70457050ea4cc2aec7566935f5e258e",
    strip_prefix = "raylib-5.5",
    build_file = "//third_party:raylib.BUILD",
)
